# contractions

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  rustfmt.toml
data/: README.md  contractions_dict.json5  contractions_double.json  contractions_double_no_apostroph.json  contractions_partial.json  contractions_single.json  contractions_single_no_apostroph.json  contractions_tripple.json  double_contractions.json  months.json  months_dict.json5  partial_contractions.json  short_forms.json5  single_contractions.json  slang.json  slang_dict.json
data/expand/: README.md  contractions_double.json  contractions_single.json  contractions_single_no_apostroph.json  contractions_tripple.json  double_contractions.json  double_no_apostrophe_contractions.json  partial_contractions.json  single_contractions.json  single_no_apostrophe_contractions.json  slang.json  tripple_contractions.json
src/: contractions.rs  lib.rs  main.rs  regex_wrapper.rs  sortable_regex.rs
src/unit_tests/: ut_contractions.rs
tests/: tests.rs
