[package]
name = "contractions"
version = "0.1.1"
authors = ["Tom Keller <tomlouiskeller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
linked-hash-map = {version = "0.5.4", features = ["serde_impl"] }
regex = "1.5.4"
serde_regex = "1.1.0"
